# infra-labs-ops

./: .ansible-lint  .gitignore  .yamllint  LIVE_HOST_SYNC_PLAN.md  README.en.md  README.md  ansible.cfg  bootstrap.yml  exporter.yml  gpu-monitor.yml  host.yml  hosts
admin_scripts/: project_cleanup.sh
ansible/: .ansible-lint  .yamllint  README.en.md  README.md  ansible.cfg  hosts
docs/: README.en.md  README.md  fleet-topology.en.md  fleet-topology.md  glossary.en.md  glossary.md  neutron-kolla-custom-image-guide.md  quickstart.en.md  (+6 more)
tools/account_automation/: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  TODO_GROUP_CREATION.md  docker-compose.yml  example.csv  pyproject.toml
tools/account_automation/deploy/: crontab  crontab.test  verify.sh
tools/account_automation/scripts/: purge_dangling_resources.py
tools/account_automation/secrets/: clouds.yaml.example
tools/account_automation/src/account_automation/: __init__.py  config.py  duration.py  logging_config.py  main.py  models.py  orchestrator.py  retry.py  sanitize.py  validators.py
tools/account_automation/src/account_automation/processors/: __init__.py  active.py  approved.py  expiring.py  pending_delete.py  ready_to_delete.py  registry.py  renewal.py
tools/account_automation/src/account_automation/repositories/: __init__.py  _sheet_mapping.py  base.py  csv_repository.py  google_sheets.py
tools/account_automation/src/account_automation/services/: __init__.py  email_service.py  openstack_service.py  rgw_admin.py
tools/account_automation/tests/: conftest.py  test_config.py  test_duration.py  test_main.py  test_models.py  test_openstack_service.py  test_orchestrator.py  test_purge_dangling_resources.py  test_rgw_admin.py  test_validators.py
tools/account_automation/tests/test_processors/: __init__.py  test_active.py  test_approved.py  test_expiring.py  test_pending_delete.py  test_ready_to_delete.py  test_registry.py  test_renewal.py
tools/account_automation/tests/test_repositories/: test_csv_repository.py  test_google_sheets_repository.py  test_sheet_mapping.py
tools/period_reconcile/: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
tools/period_reconcile/src/period_reconcile/: __init__.py  cli.py  lock.py  logging_config.py  periods.py  reconcile.py  watermark.py
tools/period_reconcile/tests/: test_cli.py  test_lock.py  test_logging_config.py  test_periods.py  test_reconcile.py  test_watermark.py
tools/usage_reports/: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
tools/usage_reports/deploy/: crontab  entrypoint.sh  reconcile.sh  supercronic-checksums.txt  verify.sh
tools/usage_reports/scripts/: rate.py  setup_hashmap.sh  setup_pyscript.sh
tools/usage_reports/src/usage_reports/: config.py  logging_config.py  main.py  models.py  orchestrator.py  periods.py  retry.py
tools/usage_reports/src/usage_reports/services/: cloudkitty_service.py  email_service.py  openstack_service.py
tools/usage_reports/src/usage_reports/templates/: report.html
tools/usage_reports/tests/: conftest.py  test_cloudkitty_service.py  test_config.py  test_email_service.py  test_logging_config.py  test_main.py  test_models.py  test_openstack_service.py  test_orchestrator.py  test_periods.py
(+163 files in other folders)
