[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usage-reports"
version = "0.1.0"
description = "CNTUG Infra Labs monthly usage cost reports"
requires-python = ">=3.12"
dependencies = [
  "openstacksdk>=4.0",
  "resend>=2.0",
  "tenacity>=9.0",
  "requests>=2.32",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "ruff>=0.9",
  "mypy>=1.14",
]

[project.scripts]
usage-reports = "usage_reports.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"usage_reports" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=usage_reports --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["src/usage_reports/services/email_service.py", "src/usage_reports/services/openstack_service.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.12"
